virglrenderer crashes on a call to virgl_renderer_get_fd_for_texture()
A gdb output snippet:
(gdb)
#0 virgl_egl_get_fd_for_texture (ve=0x0, tex_id=205, fd=0xffff60e6586c)
This is caused by the fact that egl_info
is initialized only when the VIRGL_RENDERER_USE_EGL
flag is passed. But the flag and the value of egl_info
are not checked in virgl_renderer_get_fd_for_texture()
and virgl_renderer_get_fd_for_texture2()
.