virgl/egl: fix null pointer dereference 1

Fixes https://gitlab.freedesktop.org/virgl/virglrenderer/issues/65

Reviewed-by Gert Wollny <gert.wollny@collabora.com>